Code updated with some new files
